fix contact form + header alignment on desktop

--- a/apps/icx-next/styles/contact.module.scss
+++ b/apps/icx-next/styles/contact.module.scss
@@ -1,9 +1,14 @@
 .contact-form {
+    width: 100%;
     min-height: 800px;
+    margin-right: auto;
     padding: var(--section-padding);
 
     button {
         background: var(--primary);
+    }
+    form {
+        max-width: 60vw;
     }
 }
 
